# empathy3.12.11

./: ChangeLog  EmpathyProject.IAB  EmpathyProject.IAD  EmpathyProject.IMB  EmpathyProject.IMD  EmpathyProject.PFI  EmpathyProject.PO  EmpathyProject.PR  EmpathyProject.PRI  EmpathyProject.PS  EmpathyProject.WK3  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  empathy.appdata.xml.in  empathy.convert  empathy.desktop  empathy.desktop.in  empathy.desktop.in.in  org.gnome.Empathy.gschema.xml
extensions/: Makefile.am  Makefile.in  extensions-cli.c  extensions.h  misc.xml
goa-mc-plugin/: Makefile.in  mcp-account-manager-goa.c  mission-control-plugin.c
help/: Makefile.am  Makefile.in
libempathy/: Makefile.am  Makefile.in  empathy-auth-factory.c  empathy-auth-factory.h  empathy-bus-names.h  empathy-chatroom-manager.c  empathy-chatroom-manager.h  empathy-chatroom.c  empathy-chatroom.h  empathy-client-factory.c  empathy-client-factory.h  empathy-connection-aggregator.c  empathy-connection-aggregator.h  empathy-contact-groups.c  empathy-contact-groups.h  empathy-contact.c  empathy-contact.h  empathy-debug.c  empathy-debug.h  empathy-dtd.gresource.xml  empathy-ft-factory.c  empathy-ft-handler.c  empathy-ft-handler.h  empathy-goa-auth-handler.c  empathy-gsettings.h  empathy-individual-manager.c  empathy-individual-manager.h  empathy-message.c  empathy-message.h  empathy-pkg-kit.c  empathy-presence-manager.c  empathy-presence-manager.h  empathy-request-util.c  empathy-request-util.h  empathy-sasl-mechanisms.c  empathy-server-sasl-handler.c  empathy-server-sasl-handler.h  empathy-server-tls-handler.c  empathy-server-tls-handler.h  empathy-status-presets.c  (+8 more)
libempathy-gtk/: Makefile.am  Makefile.in  empathy-account-chooser.c  empathy-account-chooser.h  empathy-account-selector-dialog.c  empathy-avatar-image.c  empathy-avatar-image.h  empathy-bad-password-dialog.c  empathy-bad-password-dialog.h  empathy-base-password-dialog.c  empathy-base-password-dialog.h  empathy-call-utils.c  empathy-call-utils.h  empathy-cell-renderer-activatable.c  empathy-cell-renderer-expander.c  empathy-cell-renderer-text.c  empathy-chat.c  empathy-chat.h  empathy-contact-blocking-dialog.c  empathy-contact-chooser.c  empathy-contact-chooser.h  empathy-contact-search-dialog.c  empathy-contact-widget.c  empathy-contact-widget.h  empathy-dialpad-button.c  empathy-dialpad-button.h  empathy-dialpad-widget.c  empathy-geoclue-helper.c  empathy-geoclue-helper.h  empathy-geometry.c  empathy-geometry.h  empathy-groups-widget.c  empathy-groups-widget.h  empathy-images.h  empathy-individual-dialogs.c  empathy-individual-dialogs.h  empathy-individual-edit-dialog.c  empathy-individual-edit-dialog.h  empathy-individual-information-dialog.c  empathy-individual-information-dialog.h  (+70 more)
po/: an.po  (+65 more)
src/: Makefile.am  Makefile.in  chat-manager-interface.c  chat-manager-interface.h  empathy-about-dialog.c  empathy-accounts-common.c  empathy-accounts-common.h  empathy-accounts-dialog.c  empathy-accounts-dialog.h  empathy-accounts.c  empathy-audio-sink.c  empathy-audio-sink.h  empathy-audio-src.c  empathy-audio-src.h  empathy-audio-utils.c  empathy-audio-utils.h  empathy-auth-client.c  empathy-call-factory.c  empathy-call-factory.h  empathy-call-handler.c  empathy-call-handler.h  empathy-call-observer.c  empathy-call-observer.h  empathy-call-window-fullscreen.c  empathy-call-window-fullscreen.h  empathy-call-window.c  empathy-call-window.h  empathy-call.c  empathy-camera-menu.c  empathy-camera-menu.h  empathy-chat-manager.c  empathy-chat-manager.h  empathy-chat-window.c  empathy-chat-window.h  empathy-chat.c  empathy-chat.gresource.xml  empathy-chat.js  empathy-chatrooms-window.c  empathy-debug-window.c  empathy-debug-window.h  (+36 more)
telepathy-account-widgets/: Makefile.am  Makefile.in  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  telepathy-account-widgets-uninstalled.pc.in
telepathy-account-widgets/data/: Makefile.am  Makefile.in
telepathy-account-widgets/data/icons/: Makefile.am  Makefile.in
telepathy-account-widgets/m4/: tpaw-args.m4  tpaw-valgrind.m4
telepathy-account-widgets/po/: LINGUAS  POTFILES.in  an.po  ar.po  as.po  ast.po  az.po  be.po  be@latin.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en@shaw.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  (+49 more)
telepathy-account-widgets/tools/: Makefile.am  Makefile.in
telepathy-account-widgets/tp-account-widgets/: Makefile.am  Makefile.in  cheese-camera-device-monitor.c  cheese-camera-device-monitor.h  totem-subtitle-encoding.c  totem-subtitle-encoding.h  tpaw-account-settings.c  tpaw-account-settings.h  tpaw-account-widget-aim.ui  tpaw-account-widget-groupwise.ui  tpaw-account-widget-icq.ui  tpaw-account-widget-irc.c  tpaw-account-widget-irc.h  tpaw-account-widget-irc.ui  tpaw-account-widget-jabber.ui  tpaw-account-widget-local-xmpp.ui  tpaw-account-widget-msn.ui  tpaw-account-widget-private.h  tpaw-account-widget-sip.c  tpaw-account-widget-sip.h  tpaw-account-widget-sip.ui  tpaw-account-widget-yahoo.ui  tpaw-account-widget.c  tpaw-account-widget.h  tpaw-account-widgets.gresource.xml  tpaw-avatar-chooser.c  tpaw-avatar-chooser.h  tpaw-builder.c  tpaw-builder.h  tpaw-calendar-button.c  tpaw-calendar-button.h  tpaw-camera-monitor.c  tpaw-camera-monitor.h  tpaw-connection-managers.c  tpaw-connection-managers.h  tpaw-contactinfo-utils.c  tpaw-contactinfo-utils.h  tpaw-debug.c  tpaw-debug.h  tpaw-gsettings.h  (+32 more)
tests/certificates/: Makefile.am  Makefile.in  certificate-authority.cer  server-cert.cer
ubuntu-online-accounts/cc-plugins/account-plugins/: Makefile.am  Makefile.in  empathy-accounts-plugin-widget.c  empathy-accounts-plugin-widget.h  empathy-accounts-plugin.c
ubuntu-online-accounts/cc-plugins/app-plugin/: Makefile.am  Makefile.in  empathy-app-plugin-widget.c  empathy-app-plugin-widget.h  empathy-app-plugin.c  empathy-app-plugin.h
(+1035 files in other folders)
